tests/sema/fail/v30_fail_ptr_ordering.ep
# COMPILE_FAIL_CONTAINS: pointer operator only supports == and !=, got <
extern "kernel32.dll" fun GetCommandLineA(): ptr
fun main(): void {
    let p = GetCommandLineA()
    let q = p < p
}
